--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,7 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>{% block head_title %} {% endblock %}Django</title>
+     <link rel="stylesheet" href="{% static 'css/compare.css' %}">
+
+    <title>{% block head_title %} YANG Diff - a Tool for YANG Module Comparison {% endblock %}</title>
   </head>
   <body>
     {% include 'navbar.html' %}
