--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
-<h1>Compare</h1>
+<h1>Yang Compare</h1>
+<hr>
+
+<h3>Select Files to Compare:</h3>
+<hr>
+
+<section>
+</section>
+
 
 {% endblock %}
