--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,6 +9,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/compare">Compare</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action='/search/'>
       <input class="form-control mr-sm-2" type="search" name='q'placeholder="Search" aria-label="Search">
