ajax versions request made

--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -24,8 +24,15 @@ Yang File Compare
 	
 </div>
 <hr>
-<button id="myClickButton" type="button">Click</button>
-<div id="myOutput"></div>
+<button type="button" class="btn btn-primary" id="myClickButton">Show XR Versions</button>
+<div id="versions" class="card" style="width: 18rem;">
+  <div class="card-header">
+    Versions
+  </div>
+  <ul id="versions-list" class="list-group list-group-flush">
+    
+  </ul>
+</div>
 
 
 {% endblock %}
