--- a/src/static/yang_compare/css/compare.css
+++ b/src/static/yang_compare/css/compare.css
@@ -3,10 +3,13 @@ body {
     margin: 0;
     font-family: "Copperplate Gothic Light", "Helvetica Neue", Helvetica, sans-serif;
     font-size: .9rem;
-    color: blue;
 }
 
 #test{
 	font-weight: 200;
   	color: red;
+}
+
+#versions{
+	padding: 10px;
 }
