--- a/src/yang_compare/static/yang_compare/css/compare.css
+++ b/src/yang_compare/static/yang_compare/css/compare.css
@@ -3,10 +3,17 @@ body {
     margin: 0;
     font-family: "Copperplate Gothic Light", "Helvetica Neue", Helvetica, sans-serif;
     font-size: .9rem;
-    color: blue;
 }
 
 #test{
 	font-weight: 200;
   	color: red;
+}
+
+#versions{
+	margin-top: 10px;
+}
+
+.jumbotron{
+	background-color: #bee5ed;
 }
