--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,21 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Yang Module Comparison</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/compare">Compare</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0" action='/search/'>
-      <input class="form-control mr-sm-2" type="search" name='q'placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+<div id="primary-menu" class="ui container">
+  <div class="ui large fixed inverted menu">
+    <a class="toc item">
+      <i class="sidebar icon"></i>
+    </a>
+    <a class="header item" href="/">Yang Module Comparison</a>
+    <a class="item" href="/">Home</a>
+    <a class="item" href="/compare">Compare</a>
+    <div class="right menu">
+      <div class="item">
+        <div class="ui icon input">
+          <input type="text" placeholder="Search...">
+          <i class="search link icon"></i>
+        </div>
+      </div>
+    </div>
   </div>
-</nav>
+</div>
