--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,5 +1,5 @@
 <div id="primary-menu" class="ui container">
-  <div class="ui large fixed inverted menu">
+  <div class="ui big fixed inverted menu">
     <a class="toc item">
       <i class="sidebar icon"></i>
     </a>
