added button animation

--- a/src/yang_compare/static/yang_compare/css/compare.css
+++ b/src/yang_compare/static/yang_compare/css/compare.css
@@ -15,6 +15,10 @@
   background-color: #9ed1de;
 }
 
+#select-title{
+  margin: 0.5em 1em;
+}
+
 .masthead.segment {
   min-height: 400px;
   padding: 1em 0em;
