--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -19,10 +19,16 @@ Yang File Compare
       Yang Compare
     </h1>
     <h2>Sample Text</h2>
-    <div class="ui huge secondary button">Get Started <i class="right arrow icon"></i></div>
+    <div id="start-btn" class="ui huge secondary button" href="#jumbo">
+    	Get Started 
+    	<i class="right arrow icon"></i>
+    </div>
   </div>
 
 </div>
+
+<h1 id="select-title">Select Files to Compare:</h1>
+<hr>
 
 <div id="placeholder" class="ui placeholder">
   <div class="image header">
