--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -31,10 +31,46 @@ Yang File Compare
 <hr>
 
 
-<div id="search-dropdown" class="ui fluid search selection dropdown">
-  <input type="hidden" name="version">
+<div id="version-dropdown1" class="ui old search selection dropdown floating button">
+  <input id="version-value1" type="hidden" name="version">
   <i class="dropdown icon"></i>
   <div class="default text">Select XR Version</div>
+</div>
+
+<div id="file-dropdown1" class="ui old disabled search selection dropdown floating button">
+  <input type="hidden" name="file">
+  <i class="dropdown icon"></i>
+  <div class="default text">Select Yang File</div>
+</div>
+
+<hr>
+
+<div id="version-dropdown2" class="ui new search selection dropdown floating button">
+  <input id="version-value2" type="hidden" name="version">
+  <i class="dropdown icon"></i>
+  <div class="default text">Select XR Version</div>
+</div>
+
+<div id="file-dropdown2" class="ui new disabled search selection dropdown floating button">
+  <input type="hidden" name="file">
+  <i class="dropdown icon"></i>
+  <div class="default text">Select Yang File</div>
+</div>
+
+<button id="compare-btn" class="ui huge teal button">
+ 	Find Diff
+</button>
+
+<button id="clear-btn" class="ui button">
+ 	Clear All
+</button>
+
+<div class="ui compact warning message">
+  <i class="close icon"></i>
+  <div class="header">
+     Please select files to compare.
+  </div>
+  Two files must be chosen.
 </div>
 
 <hr>
