--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -43,6 +43,10 @@ Yang File Compare
   <div class="default text">Select Yang File</div>
 </div>
 
+<button id="view-file-btn1" class="ui button">
+ 	View File
+</button>
+
 <hr>
 
 <div id="version-dropdown2" class="ui new search selection dropdown floating button">
@@ -63,6 +67,10 @@ Yang File Compare
 
 <button id="clear-btn" class="ui button">
  	Clear All
+</button>
+
+<button id="same-file-btn" class="ui button">
+ 	Compare Same File
 </button>
 
 <div class="ui compact warning message">
