fixed and adapted yangdiff.py

--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -111,14 +111,24 @@ Yang File Compare
   Two files must be chosen.
 </div>
 
+<div id="diff">
+	<hr>
+	<h2 class="ui block header">
+	  Module Comparison
+	</h2>
+	<div class="ui raised segment">
+		<pre></pre>
+	</div>
+</div>
+
 <hr>
 <button class="ui primary button" id="versions-button">Show XR Versions</button>
 
 <div id="versions">	
-	<h3 class="ui top attached header versions">
+	<h3 class="ui block header">
 	  Versions
 	</h3>
-	<div class="ui attached raised segment versions">
+	<div class="ui raised segment">
 	 	<div id="versions-list" class="ui divided relaxed list">
 
 		</div>
