added loading state, dealt with error handling

--- a/src/yang_compare/static/yang_compare/css/compare.css
+++ b/src/yang_compare/static/yang_compare/css/compare.css
@@ -21,7 +21,11 @@
   min-width: 500px;
 }
 
-.ui.warning.message{
+#error-msg pre{
+  font-family: Lato,'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+
+.ui.diff.message{
   display: none;
 }
 
