--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -103,7 +103,7 @@ Yang File Compare
  	Compare Same File
 </button>
 
-<div id="files-missing-msg" class="ui compact warning message">
+<div id="files-missing-msg" class="ui compact warning diff message">
   <i class="close icon"></i>
   <div class="header">
      Please select files to compare.
@@ -111,7 +111,7 @@ Yang File Compare
   Two files must be chosen.
 </div>
 
-<div id="same-file-msg" class="ui compact warning message">
+<div id="same-file-msg" class="ui compact warning diff message">
   <i class="close icon"></i>
   <div class="header">
   	Please select unique files.
@@ -119,12 +119,12 @@ Yang File Compare
   The same file has been chosen twice.
 </div>
 
-<div id="error-msg" class="ui compact warning message">
+<div id="error-msg" class="ui compact negative diff message">
   <i class="close icon"></i>
   <div class="header">
-  	Error Occured.
+  	Error Occured!
   </div>
-  Sample Text
+  <pre></pre>
 </div>
 
 <div id="diff">
