added diff download functionality; worked on error handling, etc.

--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -20,8 +20,8 @@ Yang File Compare
     </h1>
     <h2>Sample Text</h2>
     <div id="start-btn" class="ui huge secondary button" href="#jumbo">
-    	Get Started 
-    	<i class="right arrow icon"></i>
+      Get Started 
+      <i class="right arrow icon"></i>
     </div>
   </div>
 
@@ -44,7 +44,7 @@ Yang File Compare
 </div>
 
 <button id="view-file-btn1" class="disabled ui button">
- 	View File
+  View File
 </button>
 
 <div id="file-view1" class="ui modal">
@@ -54,9 +54,9 @@ Yang File Compare
   </div>
   <div class="actions">
     <div class="ui primary approve right labeled icon button">
-    	Continue
-    	<i class="checkmark icon"></i>
-	</div>
+      Continue
+      <i class="checkmark icon"></i>
+  </div>
   </div>
 </div>
 
@@ -75,7 +75,7 @@ Yang File Compare
 </div>
 
 <button id="view-file-btn2" class="disabled ui button">
- 	View File
+  View File
 </button>
 
 <div id="file-view2" class="ui modal">
@@ -85,22 +85,22 @@ Yang File Compare
   </div>
   <div class="actions">
     <div class="ui primary approve right labeled icon button">
-    	Continue
-    	<i class="checkmark icon"></i>
-	</div>
+      Continue
+      <i class="checkmark icon"></i>
+  </div>
   </div>
 </div>
 
 <button id="compare-btn" class="ui huge teal button">
- 	Find Diff
+  Find Diff
 </button>
 
 <button id="clear-btn" class="ui button">
- 	Clear All
+  Clear All
 </button>
 
 <button id="same-file-btn" class="ui button">
- 	Compare Same File
+  Compare Same File
 </button>
 
 <div id="files-missing-msg" class="ui compact warning diff message">
@@ -114,7 +114,7 @@ Yang File Compare
 <div id="same-file-msg" class="ui compact warning diff message">
   <i class="close icon"></i>
   <div class="header">
-  	Please select unique files.
+    Please select unique files.
   </div>
   The same file has been chosen twice.
 </div>
@@ -122,33 +122,25 @@ Yang File Compare
 <div id="error-msg" class="ui compact negative diff message">
   <i class="close icon"></i>
   <div class="header">
-  	Error Occured!
+    Error Occured!
   </div>
   <pre></pre>
 </div>
 
 <div id="diff">
-	<hr>
-	<h2 class="ui block header">
-	  Module Comparison
-	</h2>
-	<div class="ui raised segment">
-		<pre></pre>
-	</div>
-</div>
-
-<hr>
-<button class="ui primary button" id="versions-button">Show XR Versions</button>
-
-<div id="versions">	
-	<h3 class="ui block header">
-	  Versions
-	</h3>
-	<div class="ui raised segment">
-	 	<div id="versions-list" class="ui divided relaxed list">
-
-		</div>
-	</div>
+  <hr>
+  <h2 class="ui top attached header">
+    Module Comparison
+  </h2>
+  <div class="ui attached segment">
+    <pre>Test Test</pre>
+  </div>
+  <div class="ui bottom attached right aligned segment">
+    <button id="download-btn" class="ui primary right labeled icon button">
+      <i class="download icon"></i>
+      Download
+    </button>
+  </div>
 </div>
 
 
