made error/warning message improvements

--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -127,6 +127,14 @@ Yang File Compare
   <pre></pre>
 </div>
 
+<div id="post-diff-warning" class="ui compact warning diff message">
+  <i class="close icon"></i>
+  <div class="header">
+    Warning!
+  </div>
+  <pre></pre>
+</div>
+
 <div id="diff">
   <hr>
   <h2 class="ui top attached header">
