--- a/src/static/yang_compare/css/compare.css
+++ b/src/static/yang_compare/css/compare.css
@@ -11,7 +11,7 @@
   min-width: 500px;
 }
 
-#error-msg pre{
+.ui.message pre{
   font-family: Lato,'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
